   * Support for displaying the saved status of the selected area.
   * Fixed error messages about missing UI elements.
 * Language and i18n:
   * Updated translations:
 * User interface:
   * Fixed bug #22095: An assertion failure in the gamestate inspector.
   * Fixed bug #22144: An assertion failure with empty labels in a listbox.
 * WML engine:
   * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
     not interrupt the game load sequence or display an error message in-game,
     resulting in loading malformed/incomplete WML data
     <http://r.wesnoth.org/p571380>.
 * Miscellaneous and bug fixes:
   * Backported Elvish_Hunter's wmltools GUI from master
   * Changed the fungus overlay terrain to repect the game values of the mixed partner.
     Fixes the bug #21971
   * Default to classic minimap unit/village color coding. (colored by side)
   * Default to classic minimap terrain representation. (satellite view)
   * Default hotkey binding for the terrain description help action. (ctrl+t)
   * Deleted obsolete UI themes.
   * Disabled the orbs for enemy units.
   * Display the tooltip for actions browsed in the hotkey preferences dialog.
   * Enabled action icons in the hotkey preferences dialog.
   * Fix bug #21717: "F5->reload wml tree" doesn't work in editor.
   * Fix bug #21298: Minimap shows invisible overlays
   * Fix bug #22116: unlock movement when attacking enemy+discovering in fog
   * Fix bug #21397: "Saving and loading may cause a side's turn is not 
     initialized".
   * Fix bug which caused no units to be displayed when reloading an end of 
     scenario save, by stripping them from the save file. However, this does 
     not fix bug #15545, which was the reason that this behavior was introduced. 
   * Fix bug #22123 "Replays don't reset map when reset button is pressed, 
     causing OOS"
   * Fix bug #22147: Assertion error when a network error is thrown during the game.