@@ -26,6 +26,7 @@
 #endif
 #include "gui/widgets/settings.hpp"
 #include "gui/widgets/window.hpp"
+#include "serialization/parser.hpp" // for write()
 #include "utils/foreach.tpp"
 
 #include "../../gamestatus.hpp"
@@ -36,6 +37,18 @@
 #include <vector>
 #include <boost/bind.hpp>
 #include <boost/shared_ptr.hpp>
+
+namespace
+{
+
+inline std::string config_to_string(const config& cfg)
+{
+	std::ostringstream s;
+	write(s, cfg);
+	return s.str();
+}
+
+}
 
 namespace gui2
 {
@@ -70,7 +83,7 @@ static void inspect_ai(twindow& window, int side)
 	NEW_find_widget<tcontrol>(
 			&window,
 			"inspect",
-			false).set_label(ai_cfg.debug());
+			false).set_label(config_to_string(ai_cfg.debug));
 }
 */
 
@@ -245,7 +258,7 @@ public:
 		FOREACH(const AUTO & c, vars.all_children_range())
 		{
 			if(selected == i) {
-				model_.set_inspect_window_text(c.cfg.debug());
+				model_.set_inspect_window_text(config_to_string(c.cfg));
 				return;
 			}
 			i++;
@@ -319,7 +332,9 @@ public:
 				if(selected == i) {
 					config c_unit;
 					u->write(c_unit);
-					model_.set_inspect_window_text(c_unit.debug());
+					std::ostringstream cfg_str;
+					write(cfg_str, c_unit);
+					model_.set_inspect_window_text(cfg_str.str());
 					return;
 				}
 				i++;
@@ -377,7 +392,7 @@ public:
 							   : config();
 			c.clear_children("ai");
 			c.clear_children("village");
-			model_.set_inspect_window_text(c.debug());
+			model_.set_inspect_window_text(config_to_string(c));
 			return;
 		}
 
@@ -389,7 +404,7 @@ public:
 
 		if(selected == 2) {
 			model_.set_inspect_window_text(
-					ai::manager::to_config(side_).debug());
+					config_to_string(ai::manager::to_config(side_)));
 			return;
 		}
 
@@ -429,7 +444,7 @@ public:
 				u.write(c_unit);
 				c.add_child("unit", c_unit);
 			}
-			model_.set_inspect_window_text(c.debug());
+			model_.set_inspect_window_text(config_to_string(c));
 			return;
 		}
 
