@@ -20,6 +20,8 @@ Version 1.11.15+dev:
  * User interface:
    * Fixed bug #22095: An assertion failure in the gamestate inspector.
    * Fixed bug #22144: An assertion failure with empty labels in a listbox.
+   * The :inspect dialog now uses the same function as saved games to generate
+     WML in text form instead of a simplified version.
  * WML engine:
    * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
      not interrupt the game load sequence or display an error message in-game,
